--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "framer-motion": "^2.3.0",
     "gatsby": "^2.23.12",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
