--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   "dependencies": {
     "framer-motion": "^2.3.0",
     "gatsby": "^2.23.12",
+    "gatsby-plugin-typography": "^2.5.10",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19",
+    "typography-theme-noriega": "^0.16.19"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
