--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
+    "formik": "^2.1.5",
     "framer-motion": "^2.3.0",
     "gatsby": "^2.23.12",
     "gatsby-plugin-typography": "^2.5.10",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.10.0",
+    "react-scroll": "^1.8.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
-    "typography-theme-noriega": "^0.16.19"
+    "typography-theme-noriega": "^0.16.19",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
