--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^2.23.12",
     "gatsby-plugin-typography": "^2.5.10",
     "react": "^16.12.0",
+    "react-div-100vh": "^0.3.8",
     "react-dom": "^16.12.0",
     "react-icons": "^3.10.0",
     "react-scroll": "^1.8.0",
