--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "formik": "^2.1.5",
     "framer-motion": "^2.3.0",
     "gatsby": "^2.23.12",
+    "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-typography": "^2.5.10",
     "react": "^16.12.0",
     "react-div-100vh": "^0.3.8",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.10.0",
     "react-scroll": "^1.8.0",
     "react-typography": "^0.16.19",
